--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "cross-env": "^7.0.2",
@@ -35,6 +36,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "resolve-url-loader": "^3.1.1",
     "style-loader": "^1.1.3",
